checker/tests/parsing/errors/unterminated_string.mft
type T {
  f: "abc;
}
=== error ===
Invalid token at 14